--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <button class="btn-success" id="getTemperature">Get Current Weather!</button>
       <div class="showWeather"></div>
     </div>
   </body>
