Add description to weather application

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <button class="btn-success" id="getTemperature">Get Current Weather!</button>
+      <button class="btn-success" id="getTemperature">Get Current Temperature!</button>
+      <br>
+      <br>
+      <label for="location2">Enter a location:</label>
+      <input id="location2" type="text">
+      <button class="btn-success" id="getDescription">Get Weather Description</button>
       <div class="showWeather"></div>
     </div>
   </body>
