--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="build/css/vendor.css">
+    <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Weather</title>
@@ -8,16 +9,18 @@
   <body>
     <div class="container">
       <h1>Get Weather Conditions From Anywhere!</h1>
-      <label for="location">Enter a location:</label>
-      <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <button class="btn-success" id="getTemperature">Get Current Temperature!</button>
-      <br>
-      <br>
-      <label for="location2">Enter a location:</label>
-      <input id="location2" type="text">
-      <button class="btn-success" id="getDescription">Get Weather Description</button>
-      <div class="showWeather"></div>
+      <div class="box">
+        <label for="location">Enter a location:</label>
+        <input id="location" type="text">
+        <button class="button btn-success" id="weatherLocation">Get Current Humidity!</button>
+        <button class="button btn-success" id="getTemperature">Get Current Temperature!</button>
+        <br>
+        <br>
+        <label for="location2">Enter a location:</label>
+        <input id="location2" type="text">
+        <button class="button btn-success" id="getDescription">Get Weather Description</button>
+        <div class="showWeather"></div>
+      </div>
     </div>
   </body>
 </html>
